Fixed Index page on safari

--- a/assets/index.css
+++ b/assets/index.css
@@ -129,12 +129,15 @@ a.tip:hover {
     position: relative;
     top: 50%;
     overflow: hidden;
+    -webkit-transform: translateY(-50%);
     transform: translateY(-50%);
 }
 .v-center[show-code] .preview {
+    -webkit-transform: translateX(-100%);
     transform: translateX(-100%);
 }
 .v-center[show-code] .code {
+    -webkit-transform: translateX(0);
     transform: translateX(0);
 }
 .v-center .preview,
@@ -145,12 +148,17 @@ a.tip:hover {
     margin: 0;
     width: 100%;
     height: 100%;
+    -webkit-transform: translateX(0);
     transform: translateX(0);
+    -webkit-transition: .5s ease-in -webkit-transform;
+    -webkit-transition: .5s ease-in transform;
+    transition: .5s ease-in -webkit-transform;
     transition: .5s ease-in transform;
 }
 .v-center .code {
     overflow: auto;
     box-sizing: border-box;
+    -webkit-transform: translateX(100%);
     transform: translateX(100%);
 }
 .v-center .code pre {
